# wordall

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  create_venv.sh  download_scowl.sh  pip_compile.sh  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: python-package.yml  test.yml
src/wordall/: game.py  run.py  word_dictionary_loaders.py  wordall.py
src/wordall/games/: numberle.py  wordle.py
src/wordall/tui/: alphabet_displays.py  app.py  app.tcss  guess_input.py  guesses_displays.py  target_displays.py
tests/: conftest.py  test_game.py  test_run.py  test_word_dictionary_loaders.py  test_wordall.py
tests/games/: test_numberle.py  test_wordle.py
tests/tui/: test_app.py
